OC  = OpenCart (alle ondersteunde versies)
OC1 = OpenCart 1
OC2 = OpenCart 2 (OC21, OC22, OC23 = specifieke minor versie binnen major versie 2)
OC3 = OpenCart 3
PS  = PrestaShop
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies)
WC2 = WooCommerce 2 (WordPress)
WC3 = WooCommerce 3 (WordPress)

5.5.0 (2018-10-??)
------------------
- ALL: Support for new roles and permissions to access the api.
- ALL: Add logging to execution stage of batch form.
- ALL: Warning: implode(): Invalid arguments passed in Completor.php on line 835.
- ALL: Make not found property specification a debug level message.

5.4.9 (2018-10-03)
------------------
- JOO: Install/update: Call to a member function getAcumulusConfig() on boolean.
- JOO: Install: File does not exist .../com_acumulus/admin/language/en-GB.com_acumulus.ini
- JOO: Add access right to config, advanced config and batch screens.

5.4.8 (2018-08-27)
------------------
- OC: SplitLine strategy was removed as having no usages: it turns out that
  OpenCart coupons need it.
- ALL: Error in assigning strategy to the vatrate-source tag in
  CompletorInvoiceLines::addVatRateToLookupLines.
- ALL: Error in initializing possible vat types.
- ALL: Empty country code now handled as NL.
- OC1/OC23: getVatRateLookupByTotalLineType() did not return any tax class id.
- ALL: Handle the case where a vat rate lookup results in multiple vat rates.
- ALL: If a parent line must be handled by the strategy phase , ensure that the
  child lines also are handled by the strategy phase if they have 'vat rate
  source' = 'parent'.

5.4.7 (2018-07-20)
------------------
- ALL: Added an option that covers how to handle missing amounts.
- OC (bug/feature?): Better handling of total lines (e.g. shipping) regarding
  whether the amount is inc or ex vat and vat rate lookup for those lines.
- ALL (bug): Option "Send consumer client records to Acumulus." removes country
  code before it is used to determine the vat type.